# uxpulse

./: README.md  docker-compose.yml
analytics/: job_generate_issues.py
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  ingest.py  issues.py  link_code.py  llm_analysis.py  main.py  models.py  schemas.py  screens.py
backend/samples/: events_batch_10.json
extension/: package.json  tsconfig.json
extension/src/: api.ts  extension.ts  views.ts
rn-demo/: README.md  uxpulse-sdk.ts
